--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   extended_image: ^6.0.2+1
   logger: ^1.1.0
+  beamer: ^1.4.0+1
 
 dev_dependencies:
   flutter_test:
