--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
   assets:
     - assets/imgs/abocado.PNG
     - assets/imgs/carrot_intro.png
+    - assets/imgs/carrot_intro_pos.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
